# trak

./: .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: python-package.yml
docs/: CNAME  conf.py  cover.css  docs_reqs.txt  index.html  index.rst  install.rst  make_index.py  plot.js  quickstart.rst  slurm.rst  style.css  template.html  trak.rst
docs/html/: .buildinfo  bert.html  clip.html  genindex.html  index.html  install.html  modeloutput.html  modules.html  objects 2.inv  objects.inv  (+8 more)
examples/: README.md  cifar2_correlation.ipynb  cifar_quickstart.ipynb  imagenet.py  qnli.py
fast_jl/: CMakeLists.txt  MANIFEST.in  README.rst  data_loading.cuh  error_handling.cuh  fast_jl.cpp  fast_jl.cu  fast_jl_kernel.cu  fast_jl_kernel.cuh  main.cu  random.cuh  setup.py  test.py  types.cuh
fast_jl/tests/: test_rademacher.py
tests/: autocast.py  memory_profiling.py  test_cifar10_accuracy.py  test_cifar2_accuracy.py  test_cifar_accuracy.py  test_class.py  test_integration_cifar.py  test_integration_clip.py  test_integration_qnli.py  test_jl.py  test_jl_additional.py  test_parallel.py  test_rademacher.py  test_rademacher_additional.py  utils.py
trak/: __init__.py  gradient_computers.py  model_output_fns.py  modelout_functions.py  projector.py  projectors.py  reweighters.py  savers.py  score_computers.py  scorers.py  traker.py  utils.py
traker/: gradient_computers.py  modelout_functions.py  projectors.py  reweighters.py  savers.py  scorers.py  traker.py  utils.py
(+63 files in other folders)
