[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trak"
dynamic = ["version", "readme"]
description = "TRAK: Understanding Model Predictions at Scale"
requires-python = ">=3.6"
dependencies = [
    'torch',
    'numpy',
    'tqdm'
]

[project.optional-dependencies]
tests = ['torchvision'
]

[tool.setuptools.dynamic]
version = {attr = "trak.VERSION"}
readme = {file = ["README.md"]}

[tool.pytest.ini_options]
markers = [
    "cuda: marks tests that require GPU",
]

[tool.setuptools.packages.find]
include = ["trak"]
